--- a/package.json
+++ b/package.json
@@ -176,10 +176,12 @@
     "angulartics2": "^1.6.3",
     "core-js": "^2.4.1",
     "es-module-loader": "^1.0.0",
+    "font-awesome": "^4.7.0",
     "intl": "^1.2.5",
     "lodash": "^4.17.4",
     "minimatch": "^3.0.3",
     "ng2-translate": "^5.0.0",
+    "primeng": "^2.0.0-rc.1",
     "reflect-metadata": "^0.1.8",
     "rxjs": "~5.0.3",
     "systemjs": "0.19.41",
