--- a/package.json
+++ b/package.json
@@ -181,6 +181,7 @@
     "lodash": "^4.17.4",
     "minimatch": "^3.0.3",
     "ng2-translate": "^5.0.0",
+    "node-sgf-parser": "^0.0.1",
     "primeng": "^2.0.0-rc.1",
     "reflect-metadata": "^0.1.8",
     "rxjs": "~5.0.3",
