--- a/package.json
+++ b/package.json
@@ -173,6 +173,7 @@
     "@ngrx/core": "^1.2.0",
     "@ngrx/effects": "^2.0.0",
     "@ngrx/store": "^2.2.1",
+    "angular2-cookie": "^1.2.6",
     "angulartics2": "^1.6.3",
     "core-js": "^2.4.1",
     "es-module-loader": "^1.0.0",
